monitoring/resources/grafana-ui/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: 100M
spec:
  tls:
  - hosts:
    - grafana.cloud-nation.club
    secretName: grafana-tls
  rules:
  - host: grafana.cloud-nation.club
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
